save/load functionality with simple object persistence in a file

--- a/CantStop/src/consoleMessages_de.properties
+++ b/CantStop/src/consoleMessages_de.properties
@@ -20,5 +20,5 @@ IN_TURN=Dran
 PLAYER_THROWN={0} hat geworfen: {1}
 CHOOSE_A_PAIR=Waehlen Sie eine Paar:
 ACTIONTITLE=ACTIONEN
-ACTION_MENU=	0:Spielende   1:Spielzugende   2:Werfen   3:Sprache tauschen
+ACTION_MENU=	0:Spielende   1:Spielzugende   2:Werfen   3:Sprache tauschen 4:Speichern 5:Laden
 LOCALE_CHANGED=Locale getauscht zu: {0}
