adding locale support to the app

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -22,3 +22,9 @@ CHOOSE_A_PAIR=Choose a pair:
 ACTIONTITLE=ACTIONS
 ACTION_MENU=		0:Finish game   1:Finish turn   2:Throw   3:Switch language  4:Save 5:Load
 LOCALE_CHANGED=Locale changed to: {0}
+
+PLAYROOM=Playroom
+WELCOME.TITLE=Welcome
+WELCOME.HEADER=Welcome to Can't Stop
+ACTION.STARTGAME=Start game
+FORM.ENTERYOURNAME=Please enter your name:
