--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -22,3 +22,9 @@ CHOOSE_A_PAIR=Waehlen Sie eine Paar:
 ACTIONTITLE=ACTIONEN
 ACTION_MENU=	0:Spielende   1:Spielzugende   2:Werfen   3:Sprache tauschen 4:Speichern 5:Laden
 LOCALE_CHANGED=Locale getauscht zu: {0}
+
+PLAYROOM=Spielraum
+WELCOME.TITLE=Willkommen
+WELCOME.HEADER=Willkommen in Can't Stop
+ACTION.STARTGAME=Spiel starten
+FORM.ENTERYOURNAME=Bitte geben Sie Ihr Name ein:
