UI is functioning - Buttons for Actions - picture for dices - Button for Pairs to choose - Markers are displayed

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -28,3 +28,5 @@ WELCOME.TITLE=Willkommen
 WELCOME.HEADER=Willkommen in Can't Stop
 ACTION.STARTGAME=Spiel starten
 FORM.ENTERYOURNAME=Bitte geben Sie Ihr Name ein:
+LAST.THROWN=Letzter Wurf:
+BUTTON.PAIRWAHL=Wahlen
