--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -28,3 +28,5 @@ WELCOME.TITLE=Welcome
 WELCOME.HEADER=Welcome to Can't Stop
 ACTION.STARTGAME=Start game
 FORM.ENTERYOURNAME=Please enter your name:
+LAST.THROWN=Last thrown:
+BUTTON.PAIRWAHL=Choose
