showing last throw and last chosen pair

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -28,5 +28,6 @@ WELCOME.TITLE=Willkommen
 WELCOME.HEADER=Willkommen in Can't Stop
 ACTION.STARTGAME=Spiel starten
 FORM.ENTERYOURNAME=Bitte geben Sie Ihr Name ein:
-LAST.THROWN=Letzter Wurf:
+ACTUAL.THROW=Aktueller Wurf:
 BUTTON.PAIRWAHL=Wahlen
+LAST.THROW=Letzter Wurf:
