improving ui to play in network   - waiting for other players to join   - waiting for other player to take actions

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -31,3 +31,14 @@ FORM.ENTERYOURNAME=Bitte geben Sie Ihr Name ein:
 ACTUAL.THROW=Aktueller Wurf:
 BUTTON.PAIRWAHL=Wahlen
 LAST.THROW=Letzter Wurf:
+ACTION.THROW=Werfen
+ACTION.FINISHGAME=Spiel beenden
+ACTION.STARTGAME=Spiel starten
+ACTION.FINISHTURN=Spielzug beenden
+ERROR.OTHERPLAYERINTURN=Anderer Spieler is im Zug
+ERROR.NOTENOUGHPLAYER=Nicht genug Spieler im Spiel!
+BYE.TITLE=Auf Wiedersehen!
+BYE.HEAD=Auf Wiedersehen!
+BYE.MSG=Danke fuer das Spiel!
+WAITING.FINISHTURN=Warten auf anderen Spieler um den Spielzug zu beenden.
+WAITING.OTHERPLAYER=Warten auf anderen Spieler beizutreten. 
