--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -31,3 +31,14 @@ FORM.ENTERYOURNAME=Please enter your name:
 ACTUAL.THROW=Actual throw:
 BUTTON.PAIRWAHL=Choose
 LAST.THROW=Last throw:
+ACTION.THROW=Throw
+ACTION.FINISHGAME=Finish game
+ACTION.STARTGAME=Start Game
+ACTION.FINISHTURN=Finish turn
+ERROR.OTHERPLAYERINTURN=Other player is in turn
+ERROR.NOTENOUGHPLAYER=Not enough player in game!
+BYE.TITLE=Bye, bye!
+BYE.HEAD=Bye, bye!
+BYE.MSG=Thank you for playing!
+WAITING.FINISHTURN=Waiting for other Player to finish the turn.
+WAITING.OTHERPLAYER=Waiting for other Player to join.
