refactoring jsp pages

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -42,3 +42,4 @@ BYE.HEAD=Auf Wiedersehen!
 BYE.MSG=Danke fuer das Spiel!
 WAITING.FINISHTURN=Warten auf anderen Spieler um den Spielzug zu beenden.
 WAITING.OTHERPLAYER=Warten auf anderen Spieler beizutreten. 
+PLAYERSINGAME=Schon beitretende Spieler im Spiel:
