--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -42,3 +42,4 @@ BYE.HEAD=Bye, bye!
 BYE.MSG=Thank you for playing!
 WAITING.FINISHTURN=Waiting for other Player to finish the turn.
 WAITING.OTHERPLAYER=Waiting for other Player to join.
+PLAYERSINGAME=Players already joined to the game:
