implementing game end functionality

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -12,6 +12,7 @@ STATE_WRONG_PAIR_CHOSEN=Falsche Paar gewaehlt
 STATE_PAIR_USED=Paar benutzt
 STATE_NO_OTHER_PAIR_AVAILABLE_ROUND_FINISHED=Keine Paar konnte gewaehlt werden.Spielzug beendet, Bergsteiger wurden vom Brett entfernt 
 STATE_GAME_WIN=Spielende, SIEGER: {0}! Gratulation!
+STATE_GAME_FINISHED=Das Spiel wurde von einem Spieler beendet
 ENTER_WAYNUMBER=Geben Sie eine Wegnummer ein ({0},{1}):
 WAYNUMBER_ENTERED=Ihre Wahl: {0} 
 GAME_MESSAGE=Spielnachrichten: {0}
@@ -37,9 +38,11 @@ ACTION.STARTGAME=Spiel starten
 ACTION.FINISHTURN=Spielzug beenden
 ERROR.OTHERPLAYERINTURN=Anderer Spieler is im Zug
 ERROR.NOTENOUGHPLAYER=Nicht genug Spieler im Spiel!
+ERROR.GAMEALREADYSTARTED=Das Spiel ist schon gestartet!
 BYE.TITLE=Auf Wiedersehen!
 BYE.HEAD=Auf Wiedersehen!
 BYE.MSG=Danke fuer das Spiel!
 WAITING.FINISHTURN=Warten auf anderen Spieler um den Spielzug zu beenden.
 WAITING.OTHERPLAYER=Warten auf anderen Spieler beizutreten. 
 PLAYERSINGAME=Schon beitretende Spieler im Spiel:
+GAMEWASFINISHED=Das Spiel wurde von einem Spieler beendet
