--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -37,6 +37,9 @@ ACTION.STARTGAME=Start Game
 ACTION.FINISHTURN=Finish turn
 ERROR.OTHERPLAYERINTURN=Other player is in turn
 ERROR.NOTENOUGHPLAYER=Not enough player in game!
+ERROR.GAMEALREADYSTARTED=Game has already started!
+GAMEWASFINISHED=Game was finished by a player
+STATE_GAME_FINISHED=Game was finished by a player
 BYE.TITLE=Bye, bye!
 BYE.HEAD=Bye, bye!
 BYE.MSG=Thank you for playing!
