implementing 4 player can join to the game

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -38,6 +38,7 @@ ACTION.FINISHTURN=Finish turn
 ERROR.OTHERPLAYERINTURN=Other player is in turn
 ERROR.NOTENOUGHPLAYER=Not enough player in game!
 ERROR.GAMEALREADYSTARTED=Game has already started!
+ERROR.TOOMANYPLAYER=Too many player!
 GAMEWASFINISHED=Game was finished by a player
 STATE_GAME_FINISHED=Game was finished by a player
 BYE.TITLE=Bye, bye!
