--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -39,6 +39,7 @@ ACTION.FINISHTURN=Spielzug beenden
 ERROR.OTHERPLAYERINTURN=Anderer Spieler is im Zug
 ERROR.NOTENOUGHPLAYER=Nicht genug Spieler im Spiel!
 ERROR.GAMEALREADYSTARTED=Das Spiel ist schon gestartet!
+ERROR.TOOMANYPLAYER=Zu viel Spieler!
 BYE.TITLE=Auf Wiedersehen!
 BYE.HEAD=Auf Wiedersehen!
 BYE.MSG=Danke fuer das Spiel!
