1: Redesign UI: Welcome page and join mechanism with AJAX
Task-Url: http://github.com/buxi/java-kungfu/issues/issue/1

AJAX is integrated into Welcome mechanism
- introduced JSONRespone object with transferring localized error
messages
- new status introduced to handle joining phase
- transfer object tests with web application context introduced

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -12,6 +12,7 @@ STATE_WRONG_PAIR_CHOSEN=Wrong pair chosen
 STATE_PAIR_USED=Pair used
 STATE_NO_OTHER_PAIR_AVAILABLE_ROUND_FINISHED=No possible choise! Round finished, climbers removed from Board
 STATE_GAME_WIN=Game finished, WINNER: {0}. Congratulation!
+STATE_ENOUGH_PLAYER=Enough player joined to the game, can be started!
 ENTER_WAYNUMBER=Enter a way number ({0},{1}):
 WAYNUMBER_ENTERED=Chosen way:{0}
 GAME_MESSAGE=Game message: {0}
@@ -39,6 +40,7 @@ ERROR.OTHERPLAYERINTURN=Other player is in turn
 ERROR.NOTENOUGHPLAYER=Not enough player in game!
 ERROR.GAMEALREADYSTARTED=Game has already started!
 ERROR.TOOMANYPLAYER=Too many player!
+ERROR.NAMEISREQUIRED=Name is required!
 GAMEWASFINISHED=Game was finished by a player
 STATE_GAME_FINISHED=Game was finished by a player
 BYE.TITLE=Bye, bye!
@@ -47,3 +49,6 @@ BYE.MSG=Thank you for playing!
 WAITING.FINISHTURN=Waiting for other Player to finish the turn.
 WAITING.OTHERPLAYER=Waiting for other Player to join.
 PLAYERSINGAME=Players already joined to the game:
+JOINED.PLAYERS=Already joined players:
+JOIN.BUTTON=Join
+JOIN.MESSAGE=There are free places to play. You can hier join:
