--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -13,6 +13,7 @@ STATE_PAIR_USED=Paar benutzt
 STATE_NO_OTHER_PAIR_AVAILABLE_ROUND_FINISHED=Keine Paar konnte gewaehlt werden.Spielzug beendet, Bergsteiger wurden vom Brett entfernt 
 STATE_GAME_WIN=Spielende, SIEGER: {0}! Gratulation!
 STATE_GAME_FINISHED=Das Spiel wurde von einem Spieler beendet
+STATE_ENOUGH_PLAYER=Genug Spieler hat beigetreten, Spiel koentte gestartet werden!
 ENTER_WAYNUMBER=Geben Sie eine Wegnummer ein ({0},{1}):
 WAYNUMBER_ENTERED=Ihre Wahl: {0} 
 GAME_MESSAGE=Spielnachrichten: {0}
@@ -40,6 +41,7 @@ ERROR.OTHERPLAYERINTURN=Anderer Spieler is im Zug
 ERROR.NOTENOUGHPLAYER=Nicht genug Spieler im Spiel!
 ERROR.GAMEALREADYSTARTED=Das Spiel ist schon gestartet!
 ERROR.TOOMANYPLAYER=Zu viel Spieler!
+ERROR.NAMEISREQUIRED=Geben Sie bitte einen Namen ein!
 BYE.TITLE=Auf Wiedersehen!
 BYE.HEAD=Auf Wiedersehen!
 BYE.MSG=Danke fuer das Spiel!
@@ -47,3 +49,6 @@ WAITING.FINISHTURN=Warten auf anderen Spieler um den Spielzug zu beenden.
 WAITING.OTHERPLAYER=Warten auf anderen Spieler beizutreten. 
 PLAYERSINGAME=Schon beitretende Spieler im Spiel:
 GAMEWASFINISHED=Das Spiel wurde von einem Spieler beendet
+JOINED.PLAYERS=Spieler, schon im Spiel:
+JOIN.BUTTON=Beitreten
+JOIN.MESSAGE=Es gibt noch freie Plaetze im Spiel. Sie koennen hier beitreten:
