2: Redesign UI: Game page
Task-Url: http://github.com/buxi/java-kungfu/issues/issue/2

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -52,3 +52,6 @@ PLAYERSINGAME=Players already joined to the game:
 JOINED.PLAYERS=Already joined players:
 JOIN.BUTTON=Join
 JOIN.MESSAGE=There are free places to play. You can hier join:
+
+HELP=Help
+HELP_LINK=http://en.wikipedia.org/wiki/Can%27t_Stop_(board_game)
