--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -52,3 +52,6 @@ GAMEWASFINISHED=Das Spiel wurde von einem Spieler beendet
 JOINED.PLAYERS=Spieler, schon im Spiel:
 JOIN.BUTTON=Beitreten
 JOIN.MESSAGE=Es gibt noch freie Plaetze im Spiel. Sie koennen hier beitreten:
+
+HELP=Hilfe
+HELP_LINK=http://de.wikipedia.org/wiki/Can%E2%80%99t_Stop
