7: UI Messages are not shown always properly
Task-Url: http://github.com/buxi/java-kungfu/issues/issue/7

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -7,20 +7,20 @@ STATE_INIT=Spiel initializiert
 STATE_IN_GAME=Im Spiel
 STATE_IN_ROUND= Im Spielzug
 STATE_ROUND_FINISHED=Spielzug geendet
-STATE_DICES_THROWN=Wuerfel wurden geworfen
-STATE_WRONG_PAIR_CHOSEN=Falsche Paar gewaehlt
+STATE_DICES_THROWN=W\u00FCrfel wurden geworfen
+STATE_WRONG_PAIR_CHOSEN=Falsche Paar gew\u00E4hlt
 STATE_PAIR_USED=Paar benutzt
-STATE_NO_OTHER_PAIR_AVAILABLE_ROUND_FINISHED=Keine Paar konnte gewaehlt werden.Spielzug beendet, Bergsteiger wurden vom Brett entfernt 
-STATE_GAME_WIN=Spielende, SIEGER: {0}! Gratulation!
+STATE_NO_OTHER_PAIR_AVAILABLE_ROUND_FINISHED=Keine Paar konnte gew\u00E4hlt werden.Spielzug beendet. 
+STATE_GAME_WIN=Spielende! Gratulation!
 STATE_GAME_FINISHED=Das Spiel wurde von einem Spieler beendet
-STATE_ENOUGH_PLAYER=Genug Spieler hat beigetreten, Spiel koentte gestartet werden!
+STATE_ENOUGH_PLAYER=Genug Spieler hat beigetreten, Spiel k\u00F6tte gestartet werden!
 ENTER_WAYNUMBER=Geben Sie eine Wegnummer ein ({0},{1}):
 WAYNUMBER_ENTERED=Ihre Wahl: {0} 
 GAME_MESSAGE=Spielnachrichten: {0}
-PAIR_NOT_CHOOSABLE=Paar ist nicht waehlbar!
+PAIR_NOT_CHOOSABLE=Paar ist nicht w\u00E4hlbar!
 IN_TURN=Dran
 PLAYER_THROWN={0} hat geworfen: {1}
-CHOOSE_A_PAIR=Waehlen Sie eine Paar:
+CHOOSE_A_PAIR=W\u00E4hlen Sie eine Paar:
 ACTIONTITLE=ACTIONEN
 ACTION_MENU=	0:Spielende   1:Spielzugende   2:Werfen   3:Sprache tauschen 4:Speichern 5:Laden
 LOCALE_CHANGED=Locale getauscht zu: {0}
@@ -31,7 +31,6 @@ WELCOME.HEADER=Willkommen in Can't Stop
 ACTION.STARTGAME=Spiel starten
 FORM.ENTERYOURNAME=Bitte geben Sie Ihr Name ein:
 ACTUAL.THROW=Aktueller Wurf:
-BUTTON.PAIRWAHL=Wahlen
 LAST.THROW=Letzter Wurf:
 ACTION.THROW=Werfen
 ACTION.FINISHGAME=Spiel beenden
@@ -44,14 +43,14 @@ ERROR.TOOMANYPLAYER=Zu viel Spieler!
 ERROR.NAMEISREQUIRED=Geben Sie bitte einen Namen ein!
 BYE.TITLE=Auf Wiedersehen!
 BYE.HEAD=Auf Wiedersehen!
-BYE.MSG=Danke fuer das Spiel!
+BYE.MSG=Danke f\u00FCr das Spiel!
 WAITING.FINISHTURN=Warten auf anderen Spieler um den Spielzug zu beenden.
 WAITING.OTHERPLAYER=Warten auf anderen Spieler beizutreten. 
 PLAYERSINGAME=Schon beitretende Spieler im Spiel:
 GAMEWASFINISHED=Das Spiel wurde von einem Spieler beendet
 JOINED.PLAYERS=Spieler, schon im Spiel:
 JOIN.BUTTON=Beitreten
-JOIN.MESSAGE=Es gibt noch freie Plaetze im Spiel. Sie koennen hier beitreten:
-
+JOIN.MESSAGE=Es gibt noch freie Pl\u00E4tze im Spiel. Sie k\u00F6nnen hier beitreten:
+BUTTON.CHOOSE=W\u00E4hlen
 HELP=Hilfe
 HELP_LINK=http://de.wikipedia.org/wiki/Can%E2%80%99t_Stop
