--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -52,6 +52,6 @@ PLAYERSINGAME=Players already joined to the game:
 JOINED.PLAYERS=Already joined players:
 JOIN.BUTTON=Join
 JOIN.MESSAGE=There are free places to play. You can hier join:
-
+BUTTON.CHOOSE=Choose
 HELP=Help
 HELP_LINK=http://en.wikipedia.org/wiki/Can%27t_Stop_(board_game)
