fixing mozilla UI problems

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -54,3 +54,4 @@ JOIN.MESSAGE=Es gibt noch freie Pl\u00E4tze im Spiel. Sie k\u00F6nnen hier beitr
 BUTTON.CHOOSE=W\u00E4hlen
 HELP=Hilfe
 HELP_LINK=http://de.wikipedia.org/wiki/Can%E2%80%99t_Stop
+ACTIVE.PLAYERS=Aktive Spieler
