--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -55,3 +55,4 @@ JOIN.MESSAGE=There are free places to play. You can hier join:
 BUTTON.CHOOSE=Choose
 HELP=Help
 HELP_LINK=http://en.wikipedia.org/wiki/Can%27t_Stop_(board_game)
+ACTIVE.PLAYERS=Active Players
