20: Auto-player UI integration
Task-Url: http://github.com/tibor-varga/cantstop/issues/issue/20

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -56,3 +56,4 @@ BUTTON.CHOOSE=Choose
 HELP=Help
 HELP_LINK=http://en.wikipedia.org/wiki/Can%27t_Stop_(board_game)
 ACTIVE.PLAYERS=Active Players
+ACTION.INVITEROBOT=Invite Robot Player
