--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -55,3 +55,4 @@ BUTTON.CHOOSE=W\u00E4hlen
 HELP=Hilfe
 HELP_LINK=http://de.wikipedia.org/wiki/Can%E2%80%99t_Stop
 ACTIVE.PLAYERS=Aktive Spieler
+ACTION.INVITEROBOT=Einladung einer Roboter Spieler
