22: More feedback on UI, when player is changed
Task-Url: http://github.com/tibor-varga/cantstop/issues/issue/22

complete refactoring message handling

--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_de.properties
@@ -56,3 +56,5 @@ HELP=Hilfe
 HELP_LINK=http://de.wikipedia.org/wiki/Can%E2%80%99t_Stop
 ACTIVE.PLAYERS=Aktive Spieler
 ACTION.INVITEROBOT=Einladung einer Roboter Spieler
+PLAYERADDED=Spieler wurde zum Spiel hinzugef\u00FCgt
+PLAYERTHROWN=W\u00FCrfel wurden geworfen
