--- a/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
+++ b/CantStop/WebContent/WEB-INF/classes/webUIMessages_en.properties
@@ -57,3 +57,5 @@ HELP=Help
 HELP_LINK=http://en.wikipedia.org/wiki/Can%27t_Stop_(board_game)
 ACTIVE.PLAYERS=Active Players
 ACTION.INVITEROBOT=Invite Robot Player
+PLAYERADDED=Player added to the game
+PLAYERTHROWN=Dices were thrown
