--- a/CantStop/src/consoleMessages_de.properties
+++ b/CantStop/src/consoleMessages_de.properties
@@ -22,3 +22,4 @@ CHOOSE_A_PAIR=Waehlen Sie eine Paar:
 ACTIONTITLE=ACTIONEN
 ACTION_MENU=	0:Spielende   1:Spielzugende   2:Werfen   3:Sprache tauschen 4:Speichern 5:Laden
 LOCALE_CHANGED=Locale getauscht zu: {0}
+PLAYERADDED=Spieler wurde zum Spiel hinzugef\u00FCgt
