--- a/CantStop/src/consoleMessages_en.properties
+++ b/CantStop/src/consoleMessages_en.properties
@@ -22,3 +22,4 @@ CHOOSE_A_PAIR=Choose a pair:
 ACTIONTITLE=ACTIONS
 ACTION_MENU=		0:Finish game   1:Finish turn   2:Throw   3:Switch language  4:Save 5:Load
 LOCALE_CHANGED=Locale changed to: {0}
+PLAYERADDED=Player added to the game
