--- a/CantStop/cantstop-webapp/src/test/resources/webUIMessages_de.properties
+++ b/CantStop/cantstop-webapp/src/test/resources/webUIMessages_de.properties
@@ -6,7 +6,7 @@ GAME_STATUS=Spielstatus:
 STATE_INIT=Spiel initializiert
 STATE_IN_GAME=Im Spiel
 STATE_IN_ROUND= Im Spielzug
-STATE_ROUND_FINISHED=Spielzug geendet
+STATE_ROUND_FINISHED=Spielzug beendet
 STATE_DICES_THROWN=W\u00FCrfel wurden geworfen
 STATE_WRONG_PAIR_CHOSEN=Falsche Paar gew\u00E4hlt
 STATE_PAIR_USED=Paar benutzt
