--- a/CantStop/cantstop-webapp/src/main/resources/webUIMessages_de.properties
+++ b/CantStop/cantstop-webapp/src/main/resources/webUIMessages_de.properties
@@ -8,9 +8,9 @@ STATE_IN_GAME=Im Spiel
 STATE_IN_ROUND= Im Spielzug
 STATE_ROUND_FINISHED=Spielzug beendet
 STATE_DICES_THROWN=W\u00FCrfel wurden geworfen
-STATE_WRONG_PAIR_CHOSEN=Falsche Paar gew\u00E4hlt
+STATE_WRONG_PAIR_CHOSEN=Falsch Paar gew\u00E4hlt
 STATE_PAIR_USED=Paar benutzt
-STATE_NO_OTHER_PAIR_AVAILABLE_ROUND_FINISHED=Keine Paar konnte gew\u00E4hlt werden.Spielzug beendet. 
+STATE_NO_OTHER_PAIR_AVAILABLE_ROUND_FINISHED=Kein Paar konnte gew\u00E4hlt werden.Spielzug beendet. 
 STATE_GAME_WIN=Spielende! Gratulation!
 STATE_GAME_FINISHED=Das Spiel wurde von einem Spieler beendet
 STATE_ENOUGH_PLAYER=Genug Spieler hat beigetreten, Spiel k\u00F6tte gestartet werden!
@@ -20,7 +20,7 @@ GAME_MESSAGE=Spielnachrichten: {0}
 PAIR_NOT_CHOOSABLE=Paar ist nicht w\u00E4hlbar!
 IN_TURN=Dran
 PLAYER_THROWN={0} hat geworfen: {1}
-CHOOSE_A_PAIR=W\u00E4hlen Sie eine Paar:
+CHOOSE_A_PAIR=W\u00E4hlen Sie ein Paar:
 ACTIONTITLE=ACTIONEN
 ACTION_MENU=	0:Spielende   1:Spielzugende   2:Werfen   3:Sprache tauschen 4:Speichern 5:Laden
 LOCALE_CHANGED=Locale getauscht zu: {0}
