fixing small issues, refactoring game reinitialization

--- a/CantStop/cantstop-webapp/src/main/resources/webUIMessages_de.properties
+++ b/CantStop/cantstop-webapp/src/main/resources/webUIMessages_de.properties
@@ -48,6 +48,7 @@ WAITING.FINISHTURN=Warten auf anderen Spieler um den Spielzug zu beenden.
 WAITING.OTHERPLAYER=Warten auf anderen Spieler beizutreten. 
 PLAYERSINGAME=Schon beitretende Spieler im Spiel:
 GAMEWASFINISHED=Das Spiel wurde von einem Spieler beendet
+START_NEW_GAME=Neues Spiel starten
 JOINED.PLAYERS=Spieler, schon im Spiel:
 JOIN.BUTTON=Beitreten
 JOIN.MESSAGE=Es gibt noch freie Pl\u00E4tze im Spiel. Sie k\u00F6nnen hier beitreten:
@@ -58,3 +59,4 @@ ACTIVE.PLAYERS=Aktive Spieler
 ACTION.INVITEROBOT=Einladung einer Roboter Spieler
 PLAYERADDED=Spieler wurde zum Spiel hinzugef\u00FCgt
 PLAYERTHROWN=W\u00FCrfel wurden geworfen
+START_NEW_GAME=Neues Spiel starten
