--- a/CantStop/cantstop-webapp/src/main/resources/webUIMessages_en.properties
+++ b/CantStop/cantstop-webapp/src/main/resources/webUIMessages_en.properties
@@ -59,3 +59,4 @@ ACTIVE.PLAYERS=Active Players
 ACTION.INVITEROBOT=Invite Robot Player
 PLAYERADDED=Player added to the game
 PLAYERTHROWN=Dices were thrown
+START_NEW_GAME=Start a new game
