--- a/CantStop/cantstop-webapp/src/test/resources/webUIMessages_de.properties
+++ b/CantStop/cantstop-webapp/src/test/resources/webUIMessages_de.properties
@@ -58,3 +58,4 @@ ACTIVE.PLAYERS=Aktive Spieler
 ACTION.INVITEROBOT=Einladung einer Roboter Spieler
 PLAYERADDED=Spieler wurde zum Spiel hinzugef\u00FCgt
 PLAYERTHROWN=W\u00FCrfel wurden geworfen
+START_NEW_GAME=Neues Spiel starten
